--- a/src/DebeziumMongoKafkaDotNetClient/DebeziumMongoKafkaDotNetClient/DebeziumMongoKafkaDotNetClient.csproj
+++ b/src/DebeziumMongoKafkaDotNetClient/DebeziumMongoKafkaDotNetClient/DebeziumMongoKafkaDotNetClient.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Confluent.Kafka" Version="1.7.0" />
+    </ItemGroup>
+
 </Project>
